Alter to use images + no canvas.

--- a/css/demo.css
+++ b/css/demo.css
@@ -10,7 +10,7 @@
 #settings .nofit           { display: none; border: 1px solid red; margin-top: 1em; padding: 1em; }
 
 #packing                   { margin-left: 15em; }
-#canvas                    { background-color: #FBFBFB; }
+#canvas                    { background-color: #FBFBFB; position: relative; border: 1px solid #000 }
 #unsupported               { border: 1px solid red; background-color: #FFFFAD; padding: 1em; margin: 1em; }
 
 textarea { resize: none; }
